media queries code, readme update

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
 .container {
   margin: 0 auto;
   max-width: 800px;
+  padding: 50px;
 }
 
 .grid-container {
@@ -100,4 +101,56 @@ body {
   background-color: hsl(179, 100%, 13%);
   color: hsl(0, 0%, 95%);
   border: 1px solid hsl(0, 0%, 95%);
+}
+
+@media only screen and (max-width: 768px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+    margin: 4rem 8rem;
+  }
+
+  .description {
+    padding-bottom: 30px;
+    font-size: 15px;
+    line-height: 2;
+  }
+
+  .Sedans {
+    border-radius: 10px 10px 0 0;
+  }
+
+  .Luxury {
+    border-radius: 0 0 10px 10px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  body {
+    font-size: 12px;
+  }
+  .grid-container {
+    grid-template-columns: 1fr;
+    margin: 1rem 2rem;
+  }
+
+  .learnmore {
+    font-family: 'Lexend Deca', sans-serif;
+    padding: 10px 15px;
+    border-radius: 23px;
+    font-size: 10px;
+    border: none;
+  }
+
+  .description {
+    padding-bottom: 20px;
+    line-height: 1.5;
+  }
+
+  .Sedans {
+    border-radius: 10px 10px 0 0;
+  }
+
+  .Luxury {
+    border-radius: 0 0 10px 10px;
+  }
 }
